converts coffee script and scss files using http://coffeescript.org/ and http://sassmeister.com/ -- ran local tests and recieved output from wit.ai

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       document.getElementById("result").innerHTML = r;
     };
     mic.connect("BHA4Z7S5LBAOOLAJUEGFNI5VMSQF74CJ");
-    // mic.start();
-    // mic.stop();
+     //mic.start();
+     //mic.stop();
 
     function kv (k, v) {
       if (toString.call(v) !== "[object String]") {
@@ -53,5 +53,6 @@
       return k + "=" + v + "\n";
     }
   </script>
+  <p>Hello World. Listen to my song.</p>
 </body>
 </html>
