--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <head>
   <link rel="stylesheet" href="microphone.css">
 </head>
+
 <body style="text-align: center;">
+
+  <p>Hello World. Listen to my song.</p>
+  <div style="width:800px; margin:0 auto;">
   <div id="microphone"></div>
   <pre id="result"></pre>
   <div id="info"></div>
@@ -53,6 +57,6 @@
       return k + "=" + v + "\n";
     }
   </script>
-  <p>Hello World. Listen to my song.</p>
+  </div>
 </body>
 </html>
